feat: strategy runtime details, per-user locks, and scalping schema
- EA: revert-safe params pending, add validations and debug hooks
- API: expose active_strategy and effective_limits in status
- Manager: per-user locks, strategy loading with overrides, cleanup locks
- SQL: add trades.strategy_type, profiles constraint, strategy_configs with RLS
- Env: SCALPING_BOT_ENABLED flag

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ BOT_AUTO_START=false
 ALLOW_BOT_CONTROL=true
 REQUIRE_AUTH_FOR_BOT_CONTROL=true
 
+# Scalping Bot
+# Enable or disable the scalping bot strategy (default: false for safety)
+SCALPING_BOT_ENABLED=false
+
+
 # Authentication (Supabase)
 # Get these from: Supabase Dashboard -> Project Settings -> API
 SUPABASE_URL=https://your-project.supabase.co
