Add RiseFall strategy, update README, indicators, and bot manager

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ REQUIRE_AUTH_FOR_BOT_CONTROL=true
 # Enable or disable the scalping bot strategy (default: false for safety)
 SCALPING_BOT_ENABLED=false
 
+# Rise/Fall Bot
+# Enable or disable the Rise/Fall scalping bot (default: false for safety)
+RISE_FALL_BOT_ENABLED=false
 
 # Authentication (Supabase)
 # Get these from: Supabase Dashboard -> Project Settings -> API
