--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,17 +18,13 @@ concurrency:
 
 env:
   PYTHON_VERSION: "3.13"
-  # You asked for failure when coverage drops below 83%.
   COVERAGE_FAIL_UNDER: "83"
-  # Set to "false" if you want to skip linting temporarily.
-  RUN_LINT: "true"
 
 jobs:
-  test-and-quality:
-    name: Tests, Coverage, and Lint
+  pytest:
+    name: pytest
     runs-on: ubuntu-latest
     timeout-minutes: 20
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -44,13 +40,30 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
 
-      - name: Lint (Black + Flake8)
-        if: ${{ env.RUN_LINT == 'true' }}
+      - name: Run pytest
         run: |
-          black --check .
-          flake8 .
+          pytest -v
 
-      - name: Run tests with coverage
+  coverage:
+    name: coverage
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: pip
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-dev.txt
+
+      - name: Run pytest with coverage
         run: |
           pytest --cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=${{ env.COVERAGE_FAIL_UNDER }}
 
@@ -60,3 +73,48 @@ jobs:
         with:
           name: coverage-xml
           path: coverage.xml
+
+  lint:
+    name: lint
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: pip
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-dev.txt
+
+      - name: Run Black and Flake8
+        run: |
+          black --check .
+          flake8 .
+
+  ci_run_tests:
+    name: CI - Run Tests
+    runs-on: ubuntu-latest
+    needs:
+      - pytest
+      - coverage
+      - lint
+    if: always()
+    steps:
+      - name: Gate overall CI result
+        run: |
+          echo "pytest=${{ needs.pytest.result }}"
+          echo "coverage=${{ needs.coverage.result }}"
+          echo "lint=${{ needs.lint.result }}"
+          if [ "${{ needs.pytest.result }}" != "success" ] || [ "${{ needs.coverage.result }}" != "success" ] || [ "${{ needs.lint.result }}" != "success" ]; then
+            echo "One or more required checks failed."
+            exit 1
+          fi
+          echo "All required checks passed."
+
