--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -22,16 +22,20 @@ jobs:
 
     steps:
       - name: Create PR if missing
+        id: create_pr
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.PR_CREATOR_TOKEN || github.token }}
           script: |
             const owner = context.repo.owner;
             const repo = context.repo.repo;
             const branch = context.ref.replace('refs/heads/', '');
             const base = 'main';
+            const compareUrl = `https://github.com/${owner}/${repo}/compare/${base}...${branch}?expand=1`;
 
             if (branch === base) {
               core.info('Push was to base branch; skipping PR creation.');
+              core.setOutput('compare_url', compareUrl);
               return;
             }
 
@@ -45,6 +49,7 @@ jobs:
 
             if (openPrs.length > 0) {
               core.info(`Open PR already exists: ${openPrs[0].html_url}`);
+              core.setOutput('compare_url', openPrs[0].html_url);
               return;
             }
 
@@ -56,14 +61,31 @@ jobs:
               `- Target branch: \`${base}\``,
             ].join('\n');
 
-            const { data: pr } = await github.rest.pulls.create({
-              owner,
-              repo,
-              title,
-              head: branch,
-              base,
-              body,
-              maintainer_can_modify: true,
-            });
+            try {
+              const { data: pr } = await github.rest.pulls.create({
+                owner,
+                repo,
+                title,
+                head: branch,
+                base,
+                body,
+                maintainer_can_modify: true,
+              });
 
-            core.info(`Created PR #${pr.number}: ${pr.html_url}`);
+              core.info(`Created PR #${pr.number}: ${pr.html_url}`);
+              core.setOutput('compare_url', pr.html_url);
+            } catch (e) {
+              const msg = String(e && e.message ? e.message : e);
+              if (e && e.status === 403 && msg.includes('not permitted to create or approve pull requests')) {
+                core.warning('GitHub Actions token cannot create PRs in this repository.');
+                core.warning('Fix: Settings -> Actions -> General -> Workflow permissions -> Read and write permissions, then enable: Allow GitHub Actions to create and approve pull requests.');
+                core.warning('Alternative: add PR_CREATOR_TOKEN secret (PAT with repo scope).');
+                core.setOutput('compare_url', compareUrl);
+                return;
+              }
+              throw e;
+            }
+
+      - name: PR link
+        run: |
+          echo "Open PR URL: ${{ steps.create_pr.outputs.compare_url }}"
